[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "content-addressed-store"
version = "1.0.0"
description = "Content-addressed block store with chunking and deduplication"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Shivay Singh", email = "shivaysinghrajputofficial@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: System :: Filesystems",
]
keywords = ["content-addressed", "storage", "chunking", "deduplication", "cas"]

[project.urls]
Homepage = "https://github.com/Shivay00001/content-addressed-store"
Repository = "https://github.com/Shivay00001/content-addressed-store"

[tool.setuptools]
py-modules = ["content_addressed_store"]
